# eden

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
examples/window/: CMakeLists.txt  Main.cc
include/Renderer/: Renderer.hh
include/Window/: AppDelegate.h  ViewDelegate.h  Window.hh
include/Window/MacOS/: AppDelegate.h
src/: Eden.cc
src/core/: Component.cc  Entity.cc  World.cc
src/ecs/: Component.cc  ECS.cc  Entity.cc  Query.cc  System.cc
src/engine/: Eden.cc
src/event/: Event.cc  EventQueue.cc
src/event_queue/: EventQueue.cc
src/log/: Log.cc
src/renderer/: Renderer.cc
src/renderer/metal/: Renderer.mm
src/window/: AppDelegate.cc  AppDelegate.mm  ViewDelegate.cc  ViewDelegate.mm  Window.cc  Window.mm
src/window/macos/: AppDelegate.mm  RawWindow.mm  ViewDelegate.mm
tests/application/: CMakeLists.txt  Main.cc
tests/window/: CMakeLists.txt  Main.cc
